--- a/TimeSheetApp/packages.config
+++ b/TimeSheetApp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net461" />
+  <package id="EntityFramework" version="6.4.0" targetFramework="net461" />
   <package id="EPPlus" version="4.5.3.2" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.7.0" targetFramework="net461" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net461" />
