Завершена работа по переводу проекта на EntityFramework. Переработана логика, исправлены ошибки

--- a/TimeSheetApp/TimeSheetApp.csproj
+++ b/TimeSheetApp/TimeSheetApp.csproj
@@ -202,6 +202,7 @@
       <DependentUpon>EFDadaModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\Excel.cs" />
+    <Compile Include="Model\ExcelWorker.cs" />
     <Compile Include="Model\ForceQuit.cs">
       <DependentUpon>EFDadaModel.tt</DependentUpon>
     </Compile>
@@ -222,6 +223,7 @@
     <Compile Include="Model\ProcessType.cs">
       <DependentUpon>EFDadaModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\Reports\AnalyticReport.cs" />
     <Compile Include="Model\Result.cs">
       <DependentUpon>EFDadaModel.tt</DependentUpon>
     </Compile>
