--- a/TimeSheetApp/App.config
+++ b/TimeSheetApp/App.config
@@ -18,7 +18,7 @@
     </TimeSheetApp.Properties.Settings>
   </applicationSettings>
   <connectionStrings>
-    <add name="TimeSheetDBEntities" connectionString="metadata=res://*/Model.EFDadaModel.csdl|res://*/Model.EFDadaModel.ssdl|res://*/Model.EFDadaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ILYAHOME\MYDB;initial catalog=TimeSheetDB; user id=TimeSheetUser;password=DK_user!; integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TimeSheetDBEntities" connectionString="metadata=res://*/Model.EFDadaModel.csdl|res://*/Model.EFDadaModel.ssdl|res://*/Model.EFDadaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ILYAHOME\MYDB;initial catalog=TimeSheetDB; user id=TimeSheetUser;password=DK_user!; integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
