Переработана модель данных - добавлены дополнительные столбцы с отношением многие ко многим.

--- a/TimeSheetApp/App.config
+++ b/TimeSheetApp/App.config
@@ -4,8 +4,8 @@
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="TimeSheetApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection,               EntityFramework,               Version=6.0.0.0,               Culture=neutral,               PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -18,7 +18,7 @@
     </TimeSheetApp.Properties.Settings>
   </applicationSettings>
   <connectionStrings>
-    <add name="TimeSheetDBEntities" connectionString="metadata=res://*/Model.EFDadaModel.csdl|res://*/Model.EFDadaModel.ssdl|res://*/Model.EFDadaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ILYAHOME\MYDB;initial catalog=TimeSheetDB; user id=TimeSheetUser;password=DK_user!; integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TimeSheetDBEntities" connectionString="metadata=res://*/Model.EFDadaModel.csdl|res://*/Model.EFDadaModel.ssdl|res://*/Model.EFDadaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=A105512;initial catalog=TimeSheet; user id=TimeSheetUser;password=DK_user!; integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
