--- a/TimeSheetApp/TimeSheetApp.csproj
+++ b/TimeSheetApp/TimeSheetApp.csproj
@@ -139,6 +139,7 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MvvmLightLibs.5.4.1.1\lib\net45\System.Windows.Interactivity.dll</HintPath>
     </Reference>
@@ -313,6 +314,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="Resource\TimeSheetHelp.chm" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -368,6 +370,7 @@
       <DependentUpon>EFDadaModel.edmx</DependentUpon>
       <LastGenOutput>EFDadaModel.cs</LastGenOutput>
     </Content>
+    <Resource Include="Resource\help.png" />
     <SplashScreen Include="Resource\Splash.png" />
   </ItemGroup>
   <ItemGroup>
