Произведен рефакторинг кода. (Переход с Model First на Code First)

--- a/TimeSheetApp/App.config
+++ b/TimeSheetApp/App.config
@@ -18,8 +18,8 @@
     </TimeSheetApp.Properties.Settings>
   </applicationSettings>
   <connectionStrings>
-    <add name="TimeSheetDBEntities" connectionString="metadata=res://*/Model.EFDadaModel.csdl|res://*/Model.EFDadaModel.ssdl|res://*/Model.EFDadaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=A105512\A105512;initial catalog=TimeSheet; user id=TimeSheetDKUser;password=DK_user!; integrated security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="TimeSheetDBEntities" connectionString="data source=ilyahome\mydb;Initial Catalog=TimeSheet;Integrated Security=True;" providerName="System.Data.SqlClient" />
+  <add name="Model1" connectionString="data source=ilyahome\mydb;initial catalog=TimeSheetDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
