--- a/TimeSheetApp/App.config
+++ b/TimeSheetApp/App.config
@@ -18,8 +18,8 @@
     </TimeSheetApp.Properties.Settings>
   </applicationSettings>
   <connectionStrings>
-    <add name="TimeSheetDBEntities" connectionString="data source=ilyahome\mydb;Initial Catalog=TimeSheet;Integrated Security=True;" providerName="System.Data.SqlClient" />
-  <add name="Model1" connectionString="data source=ilyahome\mydb;initial catalog=TimeSheetDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="TimeSheetDBEntities" connectionString="data source=A105512\A105512;Initial Catalog=TimeSheet;Integrated Security=True;User ID=TimeSheetUser; Password=DK_User!" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
