Переработана логика отчета №2 (теперь в отчет выгружаются только выбранные клиенты), а также строковые значения для полей с мультивыбором.

--- a/TimeSheetApp/TimeSheetApp.csproj
+++ b/TimeSheetApp/TimeSheetApp.csproj
@@ -198,7 +198,9 @@
     <Compile Include="Model\EntitiesBase\Upravlenie.cs" />
     <Compile Include="Model\Excel.cs" />
     <Compile Include="Model\IEFDataProvider.cs" />
+    <Compile Include="Model\Interfaces\IReport.cs" />
     <Compile Include="Model\LocalWorker.cs" />
+    <Compile Include="Model\Reports\Report_02.cs" />
     <Compile Include="Model\Selection.cs" />
     <Compile Include="Model\TimeSheetContext.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
