Добавил возможность выбора аналитиков на вкладке отчеты. Реализовал отображение выбранных аналитиков в ListView

--- a/TimeSheetApp/App.config
+++ b/TimeSheetApp/App.config
@@ -18,7 +18,7 @@
     </TimeSheetApp.Properties.Settings>
   </applicationSettings>
   <connectionStrings>
-    <add name="TimeSheetDBEntities" connectionString="data source=ilyahome\mydb;Initial Catalog=TimeSheet;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="TimeSheetDBEntities" connectionString="data source=A105512\A105512;Initial Catalog=TimeSheet;Integrated Security=false;user Id=TimeSheetUser;password=DK_user!" providerName="System.Data.SqlClient" />
   <add name="Model1" connectionString="data source=ilyahome\mydb;initial catalog=TimeSheetDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
