--- a/TimeSheetApp/App.config
+++ b/TimeSheetApp/App.config
@@ -18,7 +18,7 @@
     </TimeSheetApp.Properties.Settings>
   </applicationSettings>
   <connectionStrings>
-    <add name="TimeSheetDBEntities" connectionString="data source=A105512\A105512;Initial Catalog=TimeSheet;Integrated Security=True;User ID=TimeSheetUser; Password=DK_User!" providerName="System.Data.SqlClient" />
+    <add name="TimeSheetDBEntities" connectionString="data source=A105512\A105512;Initial Catalog=TimeSheet;Integrated Security=false;MultipleActiveResultSets=True;User Id= TimeSheetUser; Password = DK_user!" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
