--- a/TimeSheetApp/App.config
+++ b/TimeSheetApp/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="TimeSheetDBEntities" connectionString="data source=A105512\A105512;Initial Catalog=TimeSheet;Integrated Security=false;MultipleActiveResultSets=True;User Id= TimeSheetUser; Password = DK_user!" providerName="System.Data.SqlClient"/>
+    <add name="DashboardDBEntities" connectionString="data source=A105512\A105512;Initial Catalog=DashboardDK;Integrated Security=false;MultipleActiveResultSets=True;User Id= TimeSheetUser; Password = DK_user!" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
