Первая часть перестройки

--- a/TimeSheetApp/App.config
+++ b/TimeSheetApp/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="TimeSheetDBEntities" connectionString="data source=A105512\A105512;Initial Catalog=TimeSheet;Integrated Security=false;MultipleActiveResultSets=True;User Id= TimeSheetUser; Password = DK_user!" providerName="System.Data.SqlClient"/>
+    <add name="TimeSheetDBEntities" connectionString="data source=A105512\A105512;Initial Catalog=TimeSheet_new;Integrated Security=false;MultipleActiveResultSets=True;User Id= TimeSheetUser; Password = DK_user!" providerName="System.Data.SqlClient"/>
     <add name="DashboardDBEntities" connectionString="data source=A105512\A105512;Initial Catalog=DashboardDK;Integrated Security=false;MultipleActiveResultSets=True;User Id= TimeSheetUser; Password = DK_user!" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
