--- a/TimeSheetApp/TimeSheetApp.csproj
+++ b/TimeSheetApp/TimeSheetApp.csproj
@@ -168,7 +168,9 @@
     <Compile Include="Model\EntitiesBase\TimeSheetTable.cs" />
     <Compile Include="Model\EntitiesBase\Upravlenie.cs" />
     <Compile Include="Model\EntitiesBase\EscalationNew.cs" />
+    <Compile Include="Model\IdentityClient.cs" />
     <Compile Include="Model\Interfaces\IDataProvider.cs" />
+    <Compile Include="Model\Interfaces\IIdentityProvider.cs" />
     <Compile Include="Model\Interfaces\IReport.cs" />
     <Compile Include="Model\Node.cs" />
     <Compile Include="Model\EntitiesBase\RiskNew.cs" />
